--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- This is just my first portfolio website. This is not hosted anywhere. -->
+<!-- Date: 23 September 2024 -->
+<!-- Author: Shubham Prakash -->
 <!DOCTYPE html>
 <html lang="en">
 
